syntax = "proto3";

option csharp_namespace = "OrderingService.Protos";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package order;

service OrderProto{
	rpc GetOrder (OrderIdRequest) returns (OrderResponse);
	rpc GetOrders (OrderCustomerIdRequest) returns (OrderListResponse);
	rpc CreateOrder (OrderCreationRequest) returns (OrderResponse);
	rpc DeleteOrder (OrderIdRequest) returns (google.protobuf.Empty);
	rpc UpdateOrder (OrderUpdateRequest) returns (google.protobuf.Empty);
}

message OrderUpdateRequest{ 
	string order_id = 1;
	google.protobuf.Timestamp order_date = 2;
}

message OrderCreationRequest{ 
	string customer_id = 1;
	google.protobuf.Timestamp order_date = 2;
}

message OrderCustomerIdRequest{ 
	string customer_id = 1;
}

message OrderListResponse{
	repeated OrderResponse orders = 1;
}

message OrderIdRequest{ 
	string order_id = 1;
}

message OrderResponse{ 
	string order_id = 1;
	string customer_id = 2;
	google.protobuf.Timestamp order_date = 3;
}

